       most of gp_init.c
BA 56- Rename row_Flm -> Flm_row, row_zm -> zm_row
   57- rewrote intnum / intnuminit routines
   58- nucomp now takes L = floor(|D|^(1/4)) as a 3rd argument. Former
       nucomp(x,n) is nucomp(x,n,NULL).
BA 59- divide_conquer_assoc renamed to gen_product
   60- sumnum algorithm (replace Abel-Plana by Euler-Mac Laurin). Changed
       the interface !
BA 61- [libpari] concat, concat1 renamed to gconcat, gconcat1
   62- rnfconductor now returns [cond, bnr, H] instead of [cond, bnr.clgp, H]
   63- nfrootsof1(), more stringent ramification tests: looking
       for a subfield Q(zeta_p^k) is now faster.

Removed
   1- deprecated functions nfbasis0, nfdisc0, factorpadic0
   2- deprecated function manage_var
   3- useless function intnuminitgen (not very useful and impossible to use
      reliably together with intnum with boundary conditions)
   4- useless function intnumstep: instead of intnum(a,b, intnumstep()+m),
      use intnum(a,b,m).
   5- partially implemented functions intfouriercos / intfouriersin /
      intfourierexp / intlaplaceinv / intmellininv / intmellinvshort: use
      intnum (possibly intfuncinit). Make sure to indicate oscillating behaviour
      when function decrease slowly at oo
   6- optional flag to intfuncinit
BA 7- divide_conquer_prod: use gen_product instead
   8- useless function sumnumalt
   9- badly implemented functions zetakinit / zetak: the interface did not
      make sense (it is impossible to initialize for Dedekind zeta without
      specifying a domain where the function is to be evaluated). Closest
      equivalent to zetakinit:
        L = lfuninit(x^2+1, [c, w, h]);
      to compute zeta_Q(i)(s) for |Re(s - c)| < w, |Im(s)| < h. Then
        lfun(L, s)
      as an analog to zetak(). Or directly lfun(x^2+1, s) if a single value
      is needed. [#368, #1647]
BA10- [libpari] FpXQX_rem_Barrett, FpXQX_divrem_Barrett: use FpXQX_get_red
BA11- [libpari] FlxqX_rem_Barrett: use FlxqX_get_red