@@ -119,18 +119,22 @@
 -41
 ? check(intnumgauss(t=1,2,t,1),3/2)
 -oo
-? \p38
-   realprecision = 38 significant digits
+? \pb20
+   realbitprecision = 20 significant bits (6 decimal digits displayed)
 ? intnumromb(x=0,1,sin(x))
-0.45969769413186028259906339255702339518
+0.459698
 ? intnumromb(x=0,1,sin(x),1)
-0.45969769413186028259906339255702338970
+0.459698
 ? intnumromb(x=1,100,exp(-x^2),2)
-0.13940279264033098824961630553871957887
+0.139403
 ? intnumromb(x=0,1,sinc(x),3)
-0.94608307036718301494135331382317964743
+0.946083
+? intnumromb(x=0,110,x,1)
+6048.32
+? intnumromb(x=-110,90,x,1)
+-1998.32
 ? intnumromb(x=2,1,x,1)
--1.4999999999999999999999999999999999999
+-1.50000
 ? intnuminit([oo,1+I],[oo,""])
   *** intnuminit: Warning: real(z)*imag(z)!=0 in endpoint code, real(z) ignored.
   ***   at top-level: intnuminit([oo,1+I],
@@ -143,4 +147,4 @@
   ***   Warning: integral from -oo to -oo.
 0
 ? print("Total time spent: ",gettime);
-Total time spent: 2044
+Total time spent: 1648
