@@ -89,14 +89,13 @@ T=intnumgaussinit(100);
 check(intnumgauss(x=-2,2,1/(1+x^2), T), 2*atan(2))
 check(intnumgauss(t=1,2,t,1),3/2)
 
-\p38
+\pb20
 intnumromb(x=0,1,sin(x))
 intnumromb(x=0,1,sin(x), 1)
 intnumromb(x=1,100,exp(-x^2), 2)
 intnumromb(x=0,1,sinc(x), 3)
-\\ sloooow
-\\intnumromb(x=0,110,x, 1)
-\\intnumromb(x=-110,90,x, 1)
+intnumromb(x=0,110,x, 1)
+intnumromb(x=-110,90,x, 1)
 intnumromb(x=2,1,x, 1)
 
 intnuminit([oo,1+I],[oo,""])
